Fixed css layout problem. Style loading issue.

--- a/src/components/pages/dashboard/Survey/multipleChoice/index.css
+++ b/src/components/pages/dashboard/Survey/multipleChoice/index.css
@@ -75,15 +75,15 @@ body {
     position: relative;
     width: 100%;
     margin: 0;
-    padding: 1.5rem 2.5rem 1.5rem 5rem;
+    padding: 1.5rem 2.5rem 1.5rem 60px;
     font-size: 16px;
     line-height: 1.5;
 }
 
 .radioCustomButton ~ .radioCustomLabel:before {
     position: absolute;
-    top: 20px;
-    left: 38px;
+    top: 15px;
+    left: 25px;
     width: 28px;
     height: 28px;
     content: '';
